// Vitest Snapshot v1

exports[`<NotFound /> > should render default 1`] = `
<NotFound__StyledNotFound>
  <Label
    color="red"
  >
    404
  </Label>
  <strong>
    Not found
  </strong>
</NotFound__StyledNotFound>
`;

exports[`<NotFound /> > should render with message 1`] = `
<NotFound__StyledNotFound>
  <Label
    color="red"
  >
    404
  </Label>
  <strong>
    Resource missing
  </strong>
</NotFound__StyledNotFound>
`;

exports[`<NotFound /> > should render with status 1`] = `
<NotFound__StyledNotFound>
  <Label
    color="red"
  >
    409
  </Label>
  <strong>
    Not found
  </strong>
</NotFound__StyledNotFound>
`;
